# LXE_AGENT

./: .env.example  .gitignore  AGENTS.md  README.md  SOUL.md  logistics_output.txt  main.py  pyproject.toml  readme.md  roll_dice.py  temp_analyze.py  temp_shipments.tsv  worker_main.py
agent_runtime/: __init__.py  context_pipeline.py  emit_bus.py  facts.py  final_answer_streamer.py  ipc_client.py  llm_adapter.py  loop.py  persona.py  runtime.py  session_manager.py  skill_index.py  skill_manifest.py  stream_logging.py  tool_display.py  tool_executor.py  tool_exposure.py  tool_registry.py  tool_schema_adapter.py  turn_handler.py  types.py  unified_worker.py  vision.py
browser_auth_service/: README.md  __init__.py  config.py  main.py  service.py
clients/: __init__.py
config/: mcp_servers.example.yaml  permission_policy.yaml  runtime.env
data/: README.md
dingtalk_stream/: card_replier.py  chatbot.py  stream.py
docs/: DOCS_AUDIT.md  README.md  amazon_web_element_recording.md  eventloop.md  install.md  network.md  py31210.md  subprocess&pipeline.md
gateway/: __init__.py  agent_queue.py  agent_supervisor.py  app.py  channel_registry.py  config.py  emitter.py  heartbeat_wake.py  ipc_server.py  models.py  planned_stop.py  session_router.py  session_scheduler.py
scripts/: _console_encoding.ps1  _dependencies.ps1  doctor.ps1  install.ps1  install.sh  launcher.ps1  logistics_update_ingest.py  permission_policy_admin.py  update.ps1  webui.ps1
shared/: agent_io.py  agent_ipc.py  agent_sessions.py  agent_state.py  connector_state.py  env.py  env_config.py  logging.py  (+6 more)
(+617 files in other folders)
