[project]
name = "lxe-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "aiohttp>=3.11.16",
    "anthropic>=0.105.2",
    "apscheduler>=3.10.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.136.3",
    "lark-oapi>=1.4.0",
    "openai==2.15.0",
    "openpyxl>=3.1.0",
    "pandas==3.0.0",
    "pillow>=10.0.0",
    "playwright>=1.40.0",
    "psycopg[binary]>=3.2",
    "py7zr>=1.1.0",
    "pyyaml>=6.0",
    "requests==2.32.5",
    "selenium>=4.0.0",
    "sqlalchemy>=2.0.0",
    "urllib3==2.6.3",
    "uvicorn>=0.49.0",
    "websockets==15.0.1",
    "xlrd>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
